--- a/MyTradeMTG/Views/User/MTGPurchaseSell.cshtml
+++ b/MyTradeMTG/Views/User/MTGPurchaseSell.cshtml
@@ -31,8 +31,8 @@
                                 <p>@ViewBag.LoginId</p>
                             </div>
                             <div class="col d-flex justify-content-between">
-                                <h4 class="m-b-0">Password :</h4>
-                                <p>@ViewBag.Password</p>
+                                <h4 class="m-b-0">Contact AddressId :</h4>
+                                <p>@ViewBag.ContactAddressId</p>
                             </div>
                             <div class="col d-flex justify-content-between">
                                 <h4 class="m-b-0">Address :</h4>
@@ -110,7 +110,7 @@
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Add Details</h5>
+                <h5 class="modal-title">MTG Sell</h5>
                 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                 @*<span style="color:red;">@TempData["SaveMTGTransferCharge"]</span>*@
                 <button type="button" class="btn-close" data-bs-dismiss="modal">
@@ -172,7 +172,10 @@
         var TotalSumValues = Amount + PercentValues;
         //alert(sum);
 
-        var TransferCharge = ($("#TransferCharge").val(TotalSumValues));
+        var TransferCharge = ($("#TransferCharge").val(PercentValues));
+
+
+        //var TransferCharge = ($("#TransferCharge").val(TotalSumValues));
         $("#TransferCharge").attr("readonly", true);
 
         if (TotalSumValues > WalletAmount) {
