--- a/MyTradeMTG/Views/Shared/_UserLayout.cshtml
+++ b/MyTradeMTG/Views/Shared/_UserLayout.cshtml
@@ -293,7 +293,8 @@
                                     <li><a href="/Wallet/WalletLedgerList">Wallet Ledger</a></li>
                                     <li><a href="/User/WalletTransfer">Direct Transfer</a></li>
                                     <li><a href="/User/MTGPurchaseSell">MTG Purchase Sell</a></li>
-                                    <li><a href="/User/SalesReport">Sales Report</a></li>
+                                    <li><a href="/User/SalesReport">Sale Report</a></li>
+                                    <li><a href="/User/SaleRequest">Sale Request</a></li>
                                 }
                             }
                         </ul>
