--- a/MyTradeMTG/Views/User/SalesReport.cshtml
+++ b/MyTradeMTG/Views/User/SalesReport.cshtml
@@ -42,12 +42,12 @@
                                     <tr>
                                         <th>Sr No.</th>
                                         <th>Franchise Contact Address</th>
-                                        <th>FirmName</th>
+                                        <th>Firm Name</th>
                                         <th>MTG Token</th>
                                         <th>Transfer Charge</th>
-                                        <th>Sale Date</th>
+                                        <th>Sale Request Date</th>
                                         <th>Status</th>
-                                        <th>Action</th>
+                                   
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -66,7 +66,7 @@
                                                     <td>@Item.TransferCharge</td>
                                                     <td>@Item.SalesDate</td>
                                                     <td>@Item.Status</td>
-                                                    <td></td>
+                                              
                                                 </tr>
                                                 i++;
                                             }
