--- a/MyTradeMTG/Views/Admin/FranchiseRequestList.cshtml
+++ b/MyTradeMTG/Views/Admin/FranchiseRequestList.cshtml
@@ -26,7 +26,7 @@
                             <div class="col-md-3">
                                 <div class="form-group row">
                                         <label>Status</label>
-                                        <input type="hidden"  value="@Model.State" id="st" />
+                                        <input type="hidden"  value="@Model.Status" id="st" />
                                           <select id="Status" name="Status" class="form-control">
                                               <option value="0">-Select-</option>
                                               <option value="Approved">Approved</option>
